Fix misalignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,7 @@ textarea:focus {
 
 ul#menu {
   height: 36px;
+  margin: 20px 0;
 }
 
 ul#menu li {
